src/rules/flake8_quotes/snapshots/ruff__rules__flake8_quotes__tests__double_docstring_docstring_singles_module_singleline.py.snap
---
source: src/rules/flake8_quotes/mod.rs
expression: diagnostics
---
- kind:
    BadQuotesDocstring: double
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 49
  fix:
    content: "\"\"\" Double quotes singleline module docstring \"\"\""
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 49
  parent: ~

